# biona_hr

./: .env  Cargo.toml  README.md  Rocket.toml
migrations/2020-08-31-170808_people/: down.sql  up.sql
migrations/2020-08-31-171907_companies/: down.sql  up.sql
migrations/2020-08-31-175421_contacts/: up.sql
migrations/2020-10-17-224330_create_tmp/: down.sql  up.sql
src/: main.rs  schema.rs
src/models/: companies.rs  mod.rs  sys_company_type.rs  tmp.rs
src/paths/: mod.rs  select.rs  tables.rs  update.rs
