[package]
name = "biona_hr"
version = "0.1.0"
authors = ["nikolaykolevk <nikolaykolevk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
serde_json = "1.0.57"


[dependencies.biona_core]
path = "../biona_core"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates", "tera_templates"]